--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -3,9 +3,9 @@
 splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
 #splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
 
-splunk.transport.tcp.host=ec2-54-242-6-114.compute-1.amazonaws.com
+splunk.transport.tcp.host=somehost
 
-splunk.transport.tcp.port=5151
+splunk.transport.tcp.port=5150
 
 splunk.transport.tcp.maxQueueSize=5MB
 
