config file tweak

--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -3,7 +3,7 @@
 splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
 #splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
 
-splunk.transport.tcp.host=somehost
+splunk.transport.tcp.host=splunk.somehost.com
 
 splunk.transport.tcp.port=5150
 
@@ -11,7 +11,7 @@ splunk.transport.tcp.maxQueueSize=5MB
 
 splunk.transport.tcp.dropEventsOnQueueFull=false
 
-agent.whitelist=com/splunk/javaagent/test/
+#agent.whitelist=com/splunk/javaagent/test/
 #agent.whitelist=com/splunk/javaagent/test/TestProgram:boo,com/splunk/javaagent/test/Foo:foo
 
 agent.blacklist=sun/,java/,javax/,com/apple
