removed nanotime for performance

--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -3,7 +3,7 @@
 splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
 #splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
 
-splunk.transport.tcp.host=splunk.somehost.com
+splunk.transport.tcp.host=localhost
 
 splunk.transport.tcp.port=5150
 
@@ -11,10 +11,9 @@ splunk.transport.tcp.maxQueueSize=5MB
 
 splunk.transport.tcp.dropEventsOnQueueFull=false
 
-#agent.whitelist=com/splunk/javaagent/test/
-#agent.whitelist=com/splunk/javaagent/test/TestProgram:boo,com/splunk/javaagent/test/Foo:foo
+agent.whitelist=com/some/package/you/want/to/monitor
 
-agent.blacklist=sun/,java/,javax/,com/apple
+agent.blacklist=com/sun,sun/,java/,javax/,com/apple,org/xml,org/apache
 
 app.name=MyTestApp
 
