--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -11,9 +11,9 @@ splunk.transport.tcp.maxQueueSize=5MB
 
 splunk.transport.tcp.dropEventsOnQueueFull=false
 
-agent.whitelist=com/some/package/you/want/to/monitor
+#agent.whitelist=com/some/package/you/want/to/monitor
 
-agent.blacklist=com/sun,sun/,java/,javax/,com/apple,org/xml,org/apache
+agent.blacklist=com/sun,sun/,java/,javax/
 
 app.name=MyTestApp
 
