Async transport , throwable tracing

--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -12,14 +12,14 @@ splunk.transport.tcp.maxQueueSize=5MB
 splunk.transport.tcp.dropEventsOnQueueFull=false
 
 #agent.whitelist=com/some/package/you/want/to/monitor
-
 agent.blacklist=com/sun,sun/,java/,javax/
 
 app.name=MyTestApp
-
 app.instance=Node1
 
 trace.methodEntered=true
 trace.methodExited=true
 trace.classLoaded=true
 trace.errors=true
+
+agent.userEventTags=key1=value1,key2=value2,key3=value3
