--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -1,25 +1,35 @@
 #See the README for definition of the propertys
 
-splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
-#splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
-
-splunk.transport.tcp.host=localhost
-
-splunk.transport.tcp.port=5150
-
-splunk.transport.tcp.maxQueueSize=5MB
-
-splunk.transport.tcp.dropEventsOnQueueFull=false
+#--------------
+# Agent options
+#--------------
 
 #agent.whitelist=com/some/package/you/want/to/monitor
 agent.blacklist=com/sun,sun/,java/,javax/
+agent.app.name=MyTestApp
+agent.app.instance=Node1
+agent.userEventTags=key1=value1,key2=value2,key3=value3
 
-app.name=MyTestApp
-app.instance=Node1
+#------------------
+# Transport options
+#------------------
+splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
+#splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
+splunk.transport.tcp.host=localhost
+splunk.transport.tcp.port=5150
+splunk.transport.tcp.maxQueueSize=5MB
+splunk.transport.tcp.dropEventsOnQueueFull=false
 
+#----------------
+# Tracing options
+#----------------
 trace.methodEntered=true
 trace.methodExited=true
 trace.classLoaded=true
 trace.errors=true
+#use JMX internally, periodically dump file, read in file & parse, send events to Splunk, delete file
+trace.hprof=true
+trace.hprof.file=/etc/tmp/dump.hprof
+#seconds
+trace.hprof.frequency=600
 
-agent.userEventTags=key1=value1,key2=value2,key3=value3
