--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -6,14 +6,14 @@
 
 agent.app.name=MyTestApp
 agent.app.instance=MyJVM
-#agent.userEventTags=key1=value1,key2=value2
+agent.userEventTags=key1=value1,key2=value2
 
 #-------------------------
 # Splunk Transport options
 #-------------------------
 splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
 #splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
-splunk.transport.tcp.host=splunkserver
+splunk.transport.tcp.host=splunk-host
 splunk.transport.tcp.port=5150
 splunk.transport.tcp.maxQueueSize=5MB
 splunk.transport.tcp.dropEventsOnQueueFull=false
@@ -33,7 +33,7 @@ trace.errors=true
 #------------------------------
 
 #periodically dump hprof file(using JMX operation call), read in file & parse, send events to Splunk, delete file
-trace.hprof=true
+trace.hprof=false
 trace.hprof.tempfile=mydump.hprof
 #trace.hprof.tempfile=/etc/tmp/dump.hprof
 #in seconds
