--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -11,9 +11,10 @@ agent.userEventTags=key1=value1,key2=value2
 #-------------------------
 # Splunk Transport options
 #-------------------------
+#splunk.transport.internalQueueSize=10000
 splunk.transport.impl=com.splunk.javaagent.transport.SplunkTCPTransport
 #splunk.transport.impl=com.splunk.javaagent.transport.SplunkStdOutTransport
-splunk.transport.tcp.host=splunk-host
+splunk.transport.tcp.host=your-splunk-server
 splunk.transport.tcp.port=5150
 splunk.transport.tcp.maxQueueSize=5MB
 splunk.transport.tcp.dropEventsOnQueueFull=false
@@ -85,7 +86,7 @@ trace.hprof.frequency=600
 #--------------------------------------------------------
 
 #Embedded JMX polling , all other JMX config is in the JMX XML configuration file.
-trace.jmx=true
+trace.jmx=false
 #name of XML files(minus the ".xml" suffix) that should reside in the root of splunkagent.jar
 trace.jmx.configfiles=jmx
 #trace.jmx.configfiles=goo,foo
