--- a/config/splunkagent.properties
+++ b/config/splunkagent.properties
@@ -23,7 +23,7 @@ splunk.transport.tcp.dropEventsOnQueueFull=false
 # Class/Method/Error Tracing options
 #-----------------------------------
 #trace.whitelist=com/some/package/you/want/to/monitor
-trace.blacklist=com/sun,sun/,java/,javax/
+trace.blacklist=com/sun,sun/,java/,javax/,com/splunk/javaagent/
 trace.methodEntered=true
 trace.methodExited=true
 trace.classLoaded=true
